Got basic scaffolding in place

--- a/connextcms/templates/imageGalleryEditor.html
+++ b/connextcms/templates/imageGalleryEditor.html
@@ -1,14 +1,14 @@
 <div class="row">
   <div class="col-sm-12">
-    <h2>Image Gallery</h2>
+    <h2>Image Editor</h2>
     <p>
-      This is the image gallery.
+      This is the image gallery editor
     </p>
     
   </div>
 </div>
 
-<!--
+<!-- 
 <form class="form-horizontal">
   <div class="form-group" id="editScaffold">
     <label for="strInput" class="col-sm-2 control-label">Add String</label>
@@ -23,5 +23,4 @@
     </div>
   </div>
 </form>
-
 -->
