Got most of the UI created

--- a/connextcms/templates/imageGalleryTemplate.html
+++ b/connextcms/templates/imageGalleryTemplate.html
@@ -1,12 +1,25 @@
 <div class="row">
   <div class="col-sm-12">
-    <h2>Image Gallery</h2>
-    <p>
-      This is the image gallery.
-    </p>
-    
+    <h2>Image Gallery</h2>        
   </div>
 </div>
+
+<div class="row" id="galleryScaffold">
+  <div class="col-md-3 col-sm-6" style="border: 1px solid black;">
+    <img src="http://via.placeholder.com/300x300" class="img-responsive center-block img0" />
+  </div>
+  <div class="col-md-3 col-sm-6" style="border: 1px solid black;">
+    <img src="http://via.placeholder.com/300x300" class="img-responsive center-block img1" />
+  </div>
+  <div class="col-md-3 col-sm-6" style="border: 1px solid black;">
+    <img src="http://via.placeholder.com/300x300" class="img-responsive center-block img2" />
+  </div>
+  <div class="col-md-3 col-sm-6" style="border: 1px solid black;">
+    <img src="http://via.placeholder.com/300x300" class="img-responsive center-block img3" />
+  </div>
+</div>
+
+
 
 <!--
 <form class="form-horizontal">
