--- a/connextcms/templates/imageGalleryEditor.html
+++ b/connextcms/templates/imageGalleryEditor.html
@@ -1,26 +1,59 @@
 <div class="row">
   <div class="col-sm-12">
-    <h2>Image Editor</h2>
-    <p>
-      This is the image gallery editor
-    </p>
+    <h2>Gallery Editor</h2>
+    <button type="button" class="btn btn-success pull-right" id="addImage"><i class="fa fa-plus"></i> Add Widget</button>    
+  </div>
+</div>
+
+<div class="row" id="editorRow" hidden>
+  <div class="col-md-6 col-sm-12" style="margin-top: 20px;">
+    <img src="http://via.placeholder.com/300x300" class="img-responsive center-block" id="selectedImage" />
+  </div>
+  
+  <div class="col-md-6 col-sm-12" style="margin-top: 20px;">
+    <form class="form-horizontal">
+      
+      <div class="form-group">        
+        <label for="imgTitle" class="col-sm-2 control-label">Title</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" placeholder="" id="imgTitle" name="imgTitle">
+        </div>
+      </div>
+        
+      <div class="form-group">
+        <label for="imgAlt" class="col-sm-2 control-label">Alt Tag</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" placeholder="" id="imgAlt" name="imgAlt">
+        </div>
+      </div>
+      
+      <div class="form-group">
+        <label for="content1" class="col-sm-2 control-label">Content 1</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" placeholder="" id="content1" name="content1">
+        </div>
+      </div>
+      
+      <div class="form-group">
+        <label for="content2" class="col-sm-2 control-label">Content 2</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" placeholder="" id="content2" name="content2">
+        </div>
+      </div>
+      
+    </form>
     
+    <div class="row">
+      <div class="col-sm-12">
+        <p><a href="#/" id="allDetails">View All Details</a></p>
+        <ul hidden>
+          <li id="scaffoldLi"></li>
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
 
 <!-- 
-<form class="form-horizontal">
-  <div class="form-group" id="editScaffold">
-    <label for="strInput" class="col-sm-2 control-label">Add String</label>
-    <div class="col-sm-8">
-      <input type="email" class="form-control strInput" placeholder="Enter a string">
-    </div>
-    <div class="col-sm-1">
-      <button type="button" class="btn btn-small btn-success addBtn">Add</button>
-    </div>
-    <div class="col-sm-1">
-      <button type="button" class="btn btn-small btn-danger delBtn">Delete</button>
-    </div>
-  </div>
-</form>
+
 -->
