--- a/connextcms/templates/imageGalleryEditor.html
+++ b/connextcms/templates/imageGalleryEditor.html
@@ -1,12 +1,13 @@
 <div class="row">
   <div class="col-sm-12">
     <h2>Gallery Editor</h2>
-    <button type="button" class="btn btn-success pull-right" id="addImage"><i class="fa fa-plus"></i> Add Widget</button>    
+    <button type="button" class="btn btn-success pull-right" id="addImage"><i class="fa fa-plus"></i> Add Image</button>    
   </div>
 </div>
 
 <div class="row" id="editorRow" hidden>
   <div class="col-md-6 col-sm-12" style="margin-top: 20px;">
+    <button type="button" class="btn btn-danger btn-xs pull-right"><i class="fa fa-close"></i></button>
     <img src="http://via.placeholder.com/300x300" class="img-responsive center-block" id="selectedImage" />
   </div>
   
