--- a/connextcms/templates/imageGalleryEditor.html
+++ b/connextcms/templates/imageGalleryEditor.html
@@ -1,6 +1,9 @@
 <div class="row">
   <div class="col-sm-12">
     <h2>Gallery Editor</h2>
+    <p>
+      Click on the image to replace it with one from the Image Library.
+    </p>
     <button type="button" class="btn btn-success pull-right" id="addImage"><i class="fa fa-plus"></i> Add Image</button>    
   </div>
 </div>
