--- a/connextcms/templates/imageGalleryTemplate.html
+++ b/connextcms/templates/imageGalleryTemplate.html
@@ -1,6 +1,9 @@
 <div class="row">
   <div class="col-sm-12">
-    <h2>Image Gallery</h2>        
+    <h2>Image Gallery</h2>  
+    <p>
+      Click on an image to edit.
+    </p>
   </div>
 </div>
 
